--- a/mod.yml
+++ b/mod.yml
@@ -1,5 +1,6 @@
 title: KH1FM Beta HUD Restoration
 game: kh1
+logo: Icon.png
 originalAuthor: Vallarin
 description: Restores the Beta HUD from the original KH1 Beta Trailer.
 assets:
