--- a/mod.yml
+++ b/mod.yml
@@ -8,3 +8,23 @@ assets:
    method: copy
    source:
      - name: remastered/command2/uitex.bin/-10780.dds
+ - name: remastered/command2/uitex.bin/FR_uitex_bin10780.dds
+   method: copy
+   source:
+     - name: remastered/command2/uitex.bin/FR_uitex_bin10780.dds
+ - name: remastered/command2/uitex.bin/GR_uitex_bin10780.dds
+   method: copy
+   source:
+     - name: remastered/command2/uitex.binGR_uitex_bin10780.dds
+ - name: remastered/command2/uitex.bin/IT_uitex_bin10780.dds
+   method: copy
+   source:
+     - name: remastered/command2/uitex.bin/IT_uitex_bin10780.dds
+ - name: remastered/command2/uitex.bin/SP_uitex_bin10780.dds
+   method: copy
+   source:
+     - name: remastered/command2/uitex.bin/SP_uitex_bin10780.dds
+- name: remastered/command2/uitex.bin/UK_uitex_bin10780.dds
+   method: copy
+   source:
+     - name: remastered/command2/uitex.bin/UK_uitex_bin10780.dds
